[package]
name = "crabpwd"
version = "0.2.0"
edition = "2021"
authors = ["Ivan Guerreschi <ivanguerreschi86@gmail.com>"]
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["cli", "terminal"]
description = "Simple CLI written in Rust to manage passwords"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
